--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: admin_app
+name: dummy_app
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -15,10 +15,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+6
+version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,77 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.2.0
-  # local_auth: ^1.1.10
-  # flutter_svg: ^1.0.1
-  # sqflite: ^2.0.1
-  rounded_loading_button: ^2.0.8
-  shared_preferences: ^2.0.12
-  http: ^0.13.4
-  pinput: ^1.2.2
-  provider: ^6.0.2
-  # flutter_zoom_drawer: ^3.0.1
-  catcher: ^0.6.9
-  edge_alerts:
-    git:
-      url: https://github.com/shahryar-cmyk/EdgeAlerts.git
-      ref: c981b4b
-  modal_bottom_sheet: ^2.0.0
-  syncfusion_flutter_charts: ^20.1.52
-  intl: ^0.17.0
-  syncfusion_flutter_datepicker: ^20.1.52
-  date_picker_timeline_trendway:
-    git:
-      url: https://github.com/shahryar-cmyk/DatePickerTimelineFlutter.git
-      ref: 4d9c163
-  fast_barcode_scanner: ^1.1.4
-  # lottie: ^1.2.1
-  # connectivity_plus: ^2.2.0
-  # data_connection_checker:
-  #   git:
-  #     url: https://github.com/chornthorn/data_connection_checker.git
-  #     ref: master
-  # geolocator: ^8.0.3
-  # permission_handler: ^9.2.0
-  flutter_smart_dialog: ^4.0.0
-  image_picker: ^0.8.4+8
-  rflutter_alert: ^2.0.4
-  floating_action_bubble: ^1.1.4
-  dot_navigation_bar: ^1.0.1+3
-  flutter_slidable: ^1.2.0
-  # flutter_native_splash: ^2.0.5
-  datetime_picker_formfield: ^2.0.0
-  google_maps_flutter: ^2.1.2
-  location: ^4.3.0
-  geolocator: ^8.2.0
-  dropdown_button2: ^1.2.2
-  expansion_tile_card: ^2.0.0
-  dropdown_search:
-  # firebase: ^9.0.2
-  # firebase_core: ^1.15.0
-  # firebase_messaging: ^11.2.14
-  # flutter_local_notifications: ^9.4.1
-
-  
-
-
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
   flutter_lints: ^1.0.0
-#   flutter_launcher_icons: "^0.9.2"
-
-
-
-# flutter_icons:
-#   android: "launcher_icon"
-#   ios: true
-#   image_path: "assets/logo.png"
-# flutter_native_splash:
-#   color: "#ffffff"
-#   image: assets/logo.png
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -118,9 +58,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/logo.png
-    - assets/images/
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
