--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,36 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  google_fonts: ^2.2.0
+  # local_auth: ^1.1.10
+  # flutter_svg: ^1.0.1
+  # sqflite: ^2.0.1
+  rounded_loading_button: ^2.0.8
+  shared_preferences: ^2.0.12
+  http: ^0.13.4
+  pinput: ^1.2.2
+  provider: ^6.0.2
+  catcher: ^0.6.9
+  edge_alerts:
+    git:
+      url: https://github.com/shahryar-cmyk/EdgeAlerts.git
+      ref: c981b4b
+  modal_bottom_sheet: ^2.0.0
+  syncfusion_flutter_charts: ^20.1.52
+  intl: ^0.17.0
+  syncfusion_flutter_datepicker: ^20.1.52
+  date_picker_timeline_trendway:
+    git:
+      url: https://github.com/shahryar-cmyk/DatePickerTimelineFlutter.git
+      ref: 4d9c163
+  flutter_smart_dialog: ^4.0.0
+  rflutter_alert: ^2.0.4
+  floating_action_bubble: ^1.1.4
+  flutter_slidable: ^1.2.0
+  datetime_picker_formfield: ^2.0.0
+  dropdown_button2: ^1.2.2
+  expansion_tile_card: ^2.0.0
+  dropdown_search: ^3.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
