--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -64,6 +64,10 @@ dependencies:
   dropdown_button2: ^1.2.2
   expansion_tile_card: ^2.0.0
   dropdown_search: ^3.0.1
+  # Maps Integeration with location
+  google_maps_flutter: ^2.1.2
+  location: ^4.3.0
+  geolocator: ^8.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
