--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ dependencies:
   google_maps_flutter: ^2.1.2
   location: ^4.3.0
   geolocator: ^8.2.0
+  # Camera Access 
+  fast_barcode_scanner: ^1.1.4
+  image_picker: ^0.8.5+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
