--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,6 @@ dependencies:
   http: ^0.13.4
   pinput: ^1.2.2
   provider: ^6.0.2
-  catcher: 0.6.5
   edge_alerts:
     git:
       url: https://github.com/shahryar-cmyk/EdgeAlerts.git
@@ -58,6 +57,7 @@ dependencies:
       ref: 4d9c163
   flutter_smart_dialog: ^4.0.0
   rflutter_alert: ^2.0.4
+  catcher: ^0.6.9
   floating_action_bubble: ^1.1.4
   flutter_slidable: ^1.2.0
   datetime_picker_formfield: ^2.0.0
