--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,9 @@ dependencies:
   catcher: ^0.6.9
   # Camera Access 
   fast_barcode_scanner: ^1.1.4
+  bottom_picker:
+  flutter_svg: ^1.1.0
+  image_picker: ^0.8.5+3
   # image_picker: ^0.8.5+2
 
 dev_dependencies:
