--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,7 +30,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -43,6 +42,8 @@ dependencies:
   http: ^0.13.4
   pinput: ^1.2.2
   provider: ^6.0.2
+  # flutter_zoom_drawer: ^3.0.1
+  catcher: ^0.6.9
   edge_alerts:
     git:
       url: https://github.com/shahryar-cmyk/EdgeAlerts.git
@@ -55,25 +56,37 @@ dependencies:
     git:
       url: https://github.com/shahryar-cmyk/DatePickerTimelineFlutter.git
       ref: 4d9c163
+  fast_barcode_scanner: ^1.1.4
+  # lottie: ^1.2.1
+  # connectivity_plus: ^2.2.0
+  # data_connection_checker:
+  #   git:
+  #     url: https://github.com/chornthorn/data_connection_checker.git
+  #     ref: master
+  # geolocator: ^8.0.3
+  permission_handler: ^9.2.0
   flutter_smart_dialog: ^4.0.0
+  image_picker: ^0.8.4+8
   rflutter_alert: ^2.0.4
-  # catcher: ^0.6.9
   floating_action_bubble: ^1.1.4
+  dot_navigation_bar: ^1.0.1+3
   flutter_slidable: ^1.2.0
+  # flutter_native_splash: ^2.0.5
   datetime_picker_formfield: ^2.0.0
-  dropdown_button2: ^1.2.2
-  expansion_tile_card: ^2.0.0
-  dropdown_search: ^3.0.1
-  # Maps Integeration with location
   google_maps_flutter: ^2.1.2
   location: ^4.3.0
   geolocator: ^8.2.0
-  catcher: ^0.6.9
-  # Camera Access 
-  fast_barcode_scanner: ^1.1.4
-  bottom_picker:
+  dropdown_button2: ^1.2.2
+  expansion_tile_card: ^2.0.0
+  dropdown_search:
+  firebase_core: ^1.15.0
+  firebase_messaging: ^11.2.14
+  flutter_local_notifications: ^9.4.1
+  bottom_picker: ^1.8.0
+  connectivity_plus: ^2.3.2
+  flutter_native_splash: ^2.2.2
+  # data_connection_checker: ^0.3.4
   flutter_svg: ^1.1.0
-  image_picker: ^0.8.5+3
   # image_picker: ^0.8.5+2
 
 dev_dependencies:
@@ -98,7 +111,6 @@ flutter_icons:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
