--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>dummy_app</string>
+	<string>Pos Geniee</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -34,10 +34,10 @@
 	<string>This app need the to get the user location when in the background </string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app requires access to your phone’s camera for scanning barcodes and taking images of user from gallery</string>
-	<!-- <key>UIBackgroundModes</key>
+	<key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
-	</array> -->
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
